src/app/components/main/dashboard/dashboard.scss
.user-dashboard-area {
	color: #4f6379;
    font-size: 16px;
    display: flex;
    flex-grow: 1;
    min-height: 100%;
    height: 100%;
    h2 {
        font-weight: 500;
        margin-bottom: 8px;
    }
    .pending-btn {
        padding: 5px 18px;
        text-transform: uppercase;
        border: 1px solid #57c3ea;
        color: #57c3ea;
        border-radius: 3px;
        font-size: 12px;
        cursor: pointer;
    }
    .completed-btn {
        padding: 5px 18px;
        text-transform: uppercase;
        border: 1px solid #b3bbc3;
        color: #b3bbc3;
        border-radius: 3px;
        font-size: 12px;
        cursor: pointer;
    }
    .conference-btn {
        font-size: 11px;
        padding: 6px 18px;
        text-transform: uppercase;
        border-radius: 3px;
        background-color: #b3bbc3;
        color: #fff;
        cursor: pointer;
        margin-left: 6px;
    }
    .left {
    	display: flex;
    	flex-flow: column;
    	flex-grow: 1;
        margin-top: 20px;
        margin-bottom: 20px;
        border-right: 2px solid rgba(231,236,241,0.3);
    	.appointments{
    		display: flex;
            padding-bottom: 40px;
            margin: 40px;
            margin-top: 20px;
            border-bottom: 2px solid rgba(231,236,241,0.3);
            flex-flow: column;

            .appointment {
              border-radius: 5px;
              border: solid 1px #e7ecf1;
              margin-top: 20px;
              display: flex;
              padding: 15px;
              .date {
                display: flex;
                flex-flow: column;
                align-items: center;
                padding-right: 20px;
                border-right: 1px solid #e7ecf1;
              }
              .detail {
                display: flex;
                flex-flow: column;
              }
            }
    	}
    	.messages {
    		display: flex;
            margin: 40px;
            margin-top: 0px;
    		flex-grow: 1;
            flex-flow: column;
            .message {
                display: flex;
                padding: 30px;
                padding-right: 20px;
                margin-top: 20px;
                padding-bottom: 10px;
                border: 1px solid #e7ecf1;
                border-radius: 5px;
                border-top-left-radius: 0;
                border-bottom-left-radius: 0;
                border-left: 5px solid #3498db;
                .time {
                    display: flex;
                    align-items: flex-start;
                    font-size: 14px;
                    opacity: 0.4;
                }
                .detail {
                    flex-grow: 1;
                }
            }
    	}
    }
    .right {
    	display: flex;
    	flex-flow: column;
        flex-basis: 440px;
        margin-top: 20px;
        margin-bottom: 20px;
        .statistics{
            display: flex;
            margin: 40px;
            border-bottom: 2px solid rgba(231,236,241,0.3);
            margin-top: 20px;  
            flex-flow: column; 
            padding-bottom:20px;         
        }
        .brokerage {
            display: flex;
            margin: 40px;
            flex-grow: 1;
            margin-top: 0px;
            flex-flow: column;
            .brokerage-item {
                display: flex;
                margin-top: 20px;
                .broker-logo {
                    height: 100px;
                    width: 100px;
                    display: flex;
                    align-items: center;
                    justify-content: center;
                    border: 1px solid #e7ecf1;
                    border-radius: 5px;
                    flex-shrink: 0;
                }
                .detail {
                    font-size: 14px;
                    display: flex;
                    flex-flow: column;
                    align-items: flex-start;
                    padding: 20px;
                }
            }
        }
    }
}
.broker-dashboard-area {
    color: #4f6379;
    font-size: 16px;
    display: flex;
    flex-grow: 1;
    min-height: 100%;
    height: 100%;
    .left {
        display: flex;
        flex-flow: column;
        flex-grow: 1;
        margin-top: 20px;
        margin-bottom: 20px;
        border-right: 2px solid rgba(231,236,241,0.3);
        .appointments{
            display: flex;
            padding-bottom: 40px;
            margin: 40px;
            margin-top: 20px;
            border-bottom: 2px solid rgba(231,236,241,0.3);
            flex-flow: column;
            .appointments-container {
                display: flex;
                flex-flow: row wrap;
                margin-top: 7px;
                .appointment {
                    display: flex;
                    border: 1px solid #e7ecf1;
                    border-radius: 5px;
                    padding: 25px 22px;
                    margin-top: 20px; 
                    margin-right: 20px;
                    width: 240px;
                    .detail {
                        display: flex;
                        flex-flow: column;
                        margin-left: 10px;
                    }
                    .pending-btn {
                        padding: 5px 18px;
                        text-transform: uppercase;
                        border: 1px solid #57c3ea;
                        color: #57c3ea;
                        border-radius: 3px;
                        font-size: 12px;
                        cursor: pointer;
                    }
                }
            }
        }
        .messages {
            display: flex;
            margin: 40px;
            margin-top: 0px;
            flex-grow: 1;
            flex-flow: column;
            .message {
                display: flex;
                padding: 30px;
                padding-right: 20px;
                padding-bottom: 10px;
                margin-top: 20px;
                border: 1px solid #e7ecf1;
                border-radius: 5px;
                border-top-left-radius: 0;
                border-bottom-left-radius: 0;
                border-left: 5px solid #3498db;
                .time {
                    display: flex;
                    align-items: flex-start;
                    font-size: 14px;
                    opacity: 0.4;
                }
                .detail {
                    flex-grow: 1;
                }
            }
        }

    }
    .right {
        display: flex;
        flex-flow: column;
        flex-basis: 260px;
        overflow: hidden;
        position:relative;
        .appointments {
            z-index: 1;
            display: flex;
            flex-flow: column;
            padding: 10px;
            .appointment {
                background-color: #fff;
                border-radius: 5px;
                .detail {
                    display: flex;
                    flex-flow: column;
                    align-items: flex-start;
                    margin-left: 10px
                }
                .conference-btn {
                    font-size: 12px;
                    padding: 6px 18px;
                    text-transform: uppercase;
                    border-radius: 3px;
                    background-color: #57c3ea;
                    color: #fff;
                    cursor: pointer;
                    margin-top: 6px;
                }

            }
        }
    }
}

